--- a/SimCardAdaptor/SimCardAdaptor.csproj
+++ b/SimCardAdaptor/SimCardAdaptor.csproj
@@ -43,8 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data.cs" />
+    <Compile Include="NanoSIMCard.cs" />
+    <Compile Include="NanoSIMCardAdaptor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ISIMCard.cs" />
+    <Compile Include="SIMCardSocket.cs" />
+    <Compile Include="SmartPhone.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
